variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: Missing closing brace `}' assumed here
var nbPas = 0
^Variables:2: error: ';' expected but ')' found.
while(estSurBiscuit == false) {avance())
                                       ^